<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ROS Sensors Driver</string>
    <string name="help_title">About Android Sensors Driver</string>
    <string name="help_message">Android Sensors Driver is an open source project!  For more information, go to the \'Wiki\'.  To report bugs or request features click \'Report\'.</string>
    <string name="help_ok">OK</string>
    <string name="help_report">Report</string>
    <string name="help_wiki">Wiki</string>
    <string name="phone1">phone1</string>
    <string name="robot_name">Robot Name:</string>
    <string name="field_robot_name">Robot Name:</string>
    <string name="field_pub_fluid">Fluid Pressure Publisher</string>
    <string name="field_pub_illuminance">Illuminance Publisher</string>
    <string name="field_pub_imu">IMU Publisher</string>
    <string name="field_pub_magnetic">Magnetic Field Publisher</string>
    <string name="field_pub_navsat">Navigation Satellite Publisher</string>
    <string name="field_pub_temp">Temperature Publisher</string>
    <string name="robot_name_hint">tango1</string>
    <string name="button_config">Configure Driver</string>
</resources>